--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,17 @@
 <div>
 	<input type="text" ng-model="searchText" placeholder="Product Search Box"></input>
-	<div class="details" ng-if="searchText">
-		Product Id
-		<span>{{product.Id}}</span>
-		Quantity
-		<span>{{product.quantity}}</span>
-		Product Name
-		<input type="text" ng-model="productName"></input>
-		Cost Price
-		<input type="text" ng-model="costPrice"></input>
-		Selling Price
-		<input type="text" ng-model="sellingPrice"></input>
-	</div>
+	<form name='assignRates' novalidate='' role='form'>
+		<div class="details" ng-if="searchText">
+			Product Id
+			<span>{{product.Id}}</span>
+			Quantity
+			<span>{{product.quantity}}</span>
+			Product Name
+			<input type="text" ng-model="productName"></input>
+			Cost Price
+			<input type="text" ng-model="costPrice" readonly></input>
+			Selling Price
+			<input type="text" ng-model="sellingPrice"  ng-pattern='/^[0-9]*$/'></input>
+		</div>
+	</form>
 </div>
