product model changes

--- a/templates/product.html
+++ b/templates/product.html
@@ -12,6 +12,6 @@
 		<input type="text" ng-model="product.costPrice" ng-if="readOnly" readonly></input>
 		<input type="text" ng-model="product.costPrice" ng-if="!readOnly"></input>
 		Selling Price
-		<input type="text" ng-model="sellingPrice"  ng-pattern='/^[0-9]*$/'></input>
+		<input type="text" ng-model="product.sellingPrice"  ng-pattern='/^[0-9]*$/'></input>
 	</div>
 </form>
