pouch db changes to add and get

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,4 +1,4 @@
-<div>
+<div class="tab-content">
 	<div ng-include src="'templates/product.html'">
 	</div>
 	<input type="submit" ng-click="addProduct()"></input>
