--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
-<div>
+<div class="tab-content">	
 	<input type="text" ng-model="searchText" placeholder="Product Search Box"></input>
-		<div ng-if="searchText">
-			<div ng-include src="'templates/product.html'"></div>
-		</div>
+	<div ng-if="searchText">		
+		<div ng-include src="'templates/product.html'"></div>
+	</div>
 </div>
