--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,13 @@
-<div class="tab-content">	
-	<input type="text" ng-model="searchText" placeholder="Product Search Box"></input>
-	<div ng-if="searchText">		
+<div class="tab-content">
+	<div data-toggle="dropdown">
+		<input class="btn btn-default dropdown-toggle" type="text" ng-model="searchText" placeholder="Product Search Box"></input>		
+	</div>
+	<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    <li ng-repeat="product in products | filter:searchText">
+    	<span>{{product.name}}</span>
+    </li>    
+  </ul>
+	<div ng-if="searchText1">		
 		<div ng-include src="'templates/product.html'"></div>
 	</div>
 </div>
