--- a/templates/product.html
+++ b/templates/product.html
@@ -1,17 +1,25 @@
-<form name='assignRates' novalidate='' role='form'>
-	<div class="details">
-		Product Id
+<form name='assignRates' novalidate=''>
+	<div class="form-group">
+		<label>Product Id</label>
 		<span ng-if="readOnly">{{product.Id}}</span>
-		<input type="text" ng-model="product.Id" ng-if="!readOnly"></input>
-		Quantity
-		<span ng-if="readOnly">{{product.quantity}}</span>
-		<input type="text" ng-model="product.qty" ng-if="!readOnly"></input>
-		Product Name
-		<input type="text" ng-model="product.name"></input>
-		Cost Price
-		<input type="text" ng-model="product.costPrice" ng-if="readOnly" readonly></input>
-		<input type="text" ng-model="product.costPrice" ng-if="!readOnly"></input>
-		Selling Price
-		<input type="text" ng-model="product.sellingPrice"  ng-pattern='/^[0-9]*$/'></input>
+		<input class="form-control" type="text" ng-model="product.Id" ng-if="!readOnly"></input>
 	</div>
+	<div class="form-group">
+		<label>Quantity</label>
+		<span ng-if="readOnly">{{product.quantity}}</span>
+		<input class="form-control" type="text" ng-model="product.qty" ng-if="!readOnly"></input>
+	</div>
+	<div class="form-group">
+		<label>Product Name</label>
+		<input class="form-control" type="text" ng-model="product.name"></input>
+	</div>
+	<div class="form-group">
+		<label>Cost Price</label>
+		<input class="form-control" type="text" ng-model="product.costPrice" ng-if="readOnly" readonly></input>
+		<input class="form-control" type="text" ng-model="product.costPrice" ng-if="!readOnly"></input>
+	</div>
+	<div class="form-group">
+		<label>Selling Price</label>
+		<input class="form-control" type="text" ng-model="product.sellingPrice"  ng-pattern='/^[0-9]*$/'></input>
+	</div>	
 </form>
