--- a/templates/product.html
+++ b/templates/product.html
@@ -2,25 +2,25 @@
 	<div class="form-group">
 		<label>Product Id</label>
 		<span ng-if="readOnly">{{product.Id}}</span>
-		<input class="form-control" type="text" ng-model="product.Id" ng-if="!readOnly" required></input>
+		<input type="text" class="form-control" ng-model="product.Id" ng-if="!readOnly" required></input>
 	</div>
 	<div class="form-group">
 		<label>Quantity</label>
 		<span ng-if="readOnly">{{product.qty}}</span>
-		<input class="form-control" type="text" ng-model="product.qty" ng-if="!readOnly" required></input>
+		<input type="text" class="form-control" ng-model="product.qty" ng-if="!readOnly" ng-pattern="/^[0-9]*$/" required></input>
 	</div>
 	<div class="form-group">
 		<label>Product Name</label>
-		<input class="form-control" type="text" ng-model="product.name" ng-keypress="editProduct($event)" required></input>
+		<input type="text" class="form-control" ng-model="product.name" ng-keypress="editProduct($event)" required></input>
 	</div>
 	<div class="form-group">
 		<label>Cost Price</label>
-		<input class="form-control" type="text" ng-model="product.costPrice" ng-if="readOnly" readonly></input>
-		<input type="text" class="form-control" type="text" ng-model="product.costPrice" ng-if="!readOnly" required></input>
+		<input type="text" class="form-control" ng-model="product.costPrice" ng-if="readOnly" readonly></input>
+		<input type="text" class="form-control" type="text" ng-model="product.costPrice" ng-if="!readOnly" ng-pattern="/^[0-9]*$/" required></input>
 	</div>
 	<div class="form-group">
 		<label>Selling Price</label>
-		<input type="text" class="form-control" type="text" ng-model="product.sellingPrice" ng-keypress="editProduct($event)" ng-pattern="/^[0-9]*$/" required></input>
+		<input type="text" class="form-control" ng-model="product.sellingPrice" ng-keypress="editProduct($event)" ng-pattern="/^[0-9]*$/" required></input>
 	</div>
 	<input type="submit" value="Add" ng-if="!readOnly" ng-disabled="productForm.$invalid"></input>
 </form>
